--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
     <div class="main-content">
         {{>header}}
         <img class="portrait" src="/img/robot.png">
+        <p>I am Juan Montero. I created this app following the udemy Node course. It uses data from mapbox and darksky</p>
     </div>
     {{>footer}}
 
